fix portal scrollbar + firefox background-size

--- a/workspace/client-portal-3.0/resources/css/portal.css
+++ b/workspace/client-portal-3.0/resources/css/portal.css
@@ -77,6 +77,7 @@
 	display: block;
 	height: auto;
 	font-size: 85%;
+	list-style-type: none;
 }
 
 .projectDataView ul li img {
@@ -118,8 +119,20 @@
 	word-break: break-word;
 }
 
-.projectDataView li span {
+.projectDataView li p {
+	font-size: 9px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    margin: 0;
+    white-space: nowrap;
+}
+
+.projectDescription {
 	color: #999;
+}
+
+.projectName {
+	font-weight: bold;
 }
 
 .projectUnauthorized {
